# playwright-amazon

./: .gitignore  README.md  pyproject.toml
src/playwright_amazon/: dp.py  main.py  screenshot.py  search.py  utils.py
